[gd_scene load_steps=8 format=3 uid="uid://cptp1fh1x8y2b"]

[ext_resource type="Script" path="res://scripts/screens.gd" id="1_aa1tc"]
[ext_resource type="PackedScene" uid="uid://dk3l5w08llgkb" path="res://scenes/title_screen.tscn" id="2_8urgk"]
[ext_resource type="Texture2D" uid="uid://cyxhmnc0vxevx" path="res://assets/textures/ui/gear.png" id="2_j45kf"]
[ext_resource type="PackedScene" uid="uid://dhh508br20xs6" path="res://scenes/pause_screen.tscn" id="3_gqv61"]
[ext_resource type="PackedScene" uid="uid://bftxfutph4ds5" path="res://scenes/game_over_screen.tscn" id="4_3q2d5"]
[ext_resource type="PackedScene" uid="uid://cm32q7r50c1ph" path="res://scenes/character_screen.tscn" id="5_lvdoa"]
[ext_resource type="Script" path="res://scripts/character_screen.gd" id="6_14kvt"]

[node name="Screens" type="CanvasLayer"]
process_mode = 3
layer = 101
script = ExtResource("1_aa1tc")

[node name="TitleScreen" parent="." instance=ExtResource("2_8urgk")]

[node name="PauseScreen" parent="." instance=ExtResource("3_gqv61")]

[node name="GameOverScreen" parent="." instance=ExtResource("4_3q2d5")]

[node name="CharacterScreen" parent="." instance=ExtResource("5_lvdoa")]
script = ExtResource("6_14kvt")

[node name="Debug" type="Control" parent="."]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConsoleLog" type="Control" parent="Debug" groups=["debug_console"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBackground" type="ColorRect" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="BuildNoLabel" type="Label" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -261.0
offset_top = 14.0
offset_right = 253.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Build 0.1.0"

[node name="ScrollContainer" type="ScrollContainer" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 48.0
offset_right = -9.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/ConsoleLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="Debug/ConsoleLog/ScrollContainer/VBoxContainer"]
layout_mode = 2
autowrap_mode = 3

[node name="ToggleConsole" type="TextureButton" parent="Debug"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -47.0
offset_right = 47.0
grow_vertical = 0
texture_normal = ExtResource("2_j45kf")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Debug/ToggleConsole" to="." method="_on_toggle_console_pressed"]
